@@ -1,0 +1,32 @@
+
+Symbol table '.symtab' contains 29 entries:
+   Num:    Value  Size Type    Bind   Vis      Ndx Name
+     0: 00000000     0 NOTYPE  LOCAL  DEFAULT  UND 
+     1: 00000050     0 SECTION LOCAL  DEFAULT    1 
+     2: 00000058     0 SECTION LOCAL  DEFAULT    2 
+     3: 00000000     0 FILE    LOCAL  DEFAULT  ABS relax_size.o
+     4: 00000050     8 NOTYPE  LOCAL  DEFAULT    1 func
+     5: 00000058     0 NOTYPE  LOCAL  DEFAULT    1 label
+     6: 00000000     0 FILE    LOCAL  DEFAULT  ABS 
+     7: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _fdata
+     8: 00000058     0 NOTYPE  GLOBAL DEFAULT    1 _etext
+     9: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _essrw
+    10: 00000058     0 NOTYPE  GLOBAL DEFAULT    1 _heap_end
+    11: 00000058     0 NOTYPE  GLOBAL DEFAULT    1 _heap_start
+    12: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _ssro_size
+    13: 00000050     0 NOTYPE  GLOBAL DEFAULT    1 _ftext
+    14: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _essro
+    15: 00000400     0 NOTYPE  GLOBAL DEFAULT  ABS _STACK_SIZE
+    16: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _HEAP_SIZE
+    17: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _ssrw_size
+    18: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _stack_end
+    19: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _edata
+    20: 00000458     0 NOTYPE  GLOBAL DEFAULT    2 _end
+    21: 00000058     0 NOTYPE  GLOBAL DEFAULT    1 _heap
+    22: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _ssro
+    23: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _ssrw
+    24: 00000458     0 NOTYPE  GLOBAL DEFAULT    2 _stack
+    25: 00000050     0 NOTYPE  GLOBAL DEFAULT  ABS _TEXT_START_ADDR
+    26: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _frodata
+    27: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _fbss
+    28: 00000058     0 NOTYPE  GLOBAL DEFAULT    2 _erodata
