@@ -1,0 +1,7 @@
+	.org 0
+	.section .text
+func:
+	braid	label
+	nop
+label:
+	.size	func, . - func
