@@ -1,0 +1,34 @@
+
+Symbol table '.symtab' contains 31 entries:
+   Num:    Value  Size Type    Bind   Vis      Ndx Name
+     0: 00000000     0 NOTYPE  LOCAL  DEFAULT  UND 
+     1: 00000050     0 SECTION LOCAL  DEFAULT    1 
+     2: 00000060     0 SECTION LOCAL  DEFAULT    2 
+     3: 00000000     0 FILE    LOCAL  DEFAULT  ABS relax_size2.o
+     4: 00000050     4 NOTYPE  LOCAL  DEFAULT    1 func
+     5: 00000054     0 NOTYPE  LOCAL  DEFAULT    1 label
+     6: 00000054     8 NOTYPE  LOCAL  DEFAULT    1 func2
+     7: 0000005c     0 NOTYPE  LOCAL  DEFAULT    1 label2
+     8: 00000000     0 FILE    LOCAL  DEFAULT  ABS 
+     9: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _fdata
+    10: 0000005c     0 NOTYPE  GLOBAL DEFAULT    1 _etext
+    11: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _essrw
+    12: 00000060     0 NOTYPE  GLOBAL DEFAULT    1 _heap_end
+    13: 00000060     0 NOTYPE  GLOBAL DEFAULT    1 _heap_start
+    14: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _ssro_size
+    15: 00000050     0 NOTYPE  GLOBAL DEFAULT    1 _ftext
+    16: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _essro
+    17: 00000400     0 NOTYPE  GLOBAL DEFAULT  ABS _STACK_SIZE
+    18: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _HEAP_SIZE
+    19: 00000000     0 NOTYPE  GLOBAL DEFAULT  ABS _ssrw_size
+    20: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _stack_end
+    21: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _edata
+    22: 00000460     0 NOTYPE  GLOBAL DEFAULT    2 _end
+    23: 00000060     0 NOTYPE  GLOBAL DEFAULT    1 _heap
+    24: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _ssro
+    25: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _ssrw
+    26: 00000460     0 NOTYPE  GLOBAL DEFAULT    2 _stack
+    27: 00000050     0 NOTYPE  GLOBAL DEFAULT  ABS _TEXT_START_ADDR
+    28: 0000005c     0 NOTYPE  GLOBAL DEFAULT    2 _frodata
+    29: 00000060     0 NOTYPE  GLOBAL DEFAULT    2 _fbss
+    30: 0000005c     0 NOTYPE  GLOBAL DEFAULT    2 _erodata
