@@ -1,3 +1,12 @@
+2012-12-18  David Holsgrove  <david.holsgrove@xilinx.com>
+
+	* gas/microblaze/relax_size.exp: New file - test object size after linker 
+	relaxation
+	* gas/microblaze/relax_size.s: Likewise
+	* gas/microblaze/relax_size.elf: Likewise
+	* gas/microblaze/relax_size2.s: Likewise
+	* gas/microblaze/relax_size2.elf: Likewise
+	
 2012-12-17  Nick Clifton  <nickc@redhat.com>
 
 	* config/default.exp: Add copyright notice.
